[gd_scene load_steps=7 format=3 uid="uid://cc0ljtrtu65lm"]

[ext_resource type="Texture2D" uid="uid://1l1sxfuumkp1" path="res://assets/Chest_closed.png" id="1_kl02w"]
[ext_resource type="Script" path="res://scripts/chest.gd" id="1_wfl4g"]
[ext_resource type="Texture2D" uid="uid://tuo1ke8jbjtk" path="res://assets/Chest_open.png" id="2_huo35"]

[sub_resource type="SpriteFrames" id="SpriteFrames_4wm32"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_kl02w")
}],
"loop": true,
"name": &"closed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_huo35")
}],
"loop": true,
"name": &"open",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gsjv7"]
size = Vector2(33.5, 17)

[sub_resource type="LabelSettings" id="LabelSettings_tegi2"]
font_size = 9

[node name="Chest" type="Area2D"]
position = Vector2(0, -8)
script = ExtResource("1_wfl4g")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_4wm32")
animation = &"closed"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_gsjv7")

[node name="Label_Chest_Open" type="Label" parent="."]
texture_filter = 1
offset_left = -33.0
offset_top = -31.0
offset_right = 38.0
offset_bottom = 1.0
text = "Open the chest?
(Press E)"
label_settings = SubResource("LabelSettings_tegi2")
horizontal_alignment = 1

[node name="Label_Insecurity_Advice" type="Label" parent="."]
texture_filter = 1
offset_left = -33.0
offset_top = -31.0
offset_right = 38.0
offset_bottom = 1.0
text = "Don't eat live 
bees."
label_settings = SubResource("LabelSettings_tegi2")
horizontal_alignment = 1

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
